[package]
name = "rust-text-editor"
version = "0.1.0"
authors = ["fosdick.io <67963637+fosdickio@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
unicode-segmentation = "1.7.1"
